--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ border: solid #11f677 1px;}
 display: flex;}
 
 .nav12 img{height: 580px;
-width: 580px;
+width: 100%;
 margin-top: 100px}
 
 .nav13 h1{color: white;
@@ -451,7 +451,7 @@ margin-top: 15px;
 margin-left: 30px;}
 
 .nav31 input{margin-left: 30px;
-width: 100%;
+width: 85%;
 background: #262529;
 height: 50px;
 color: white;
@@ -459,7 +459,7 @@ border: solid #262529 1px;
 border-radius: 7px;}
 
 .nav30 input{margin-left: 30px;
-width: 100%;
+width: 85%;
 color: white;
 background: #262529;
 height: 150px;
@@ -477,7 +477,7 @@ margin-left: 30px;
 background: #11f677;
 border: solid #11f677 1px;
 padding: 10px 20px;
-width: 100%;
+width: 85%;
 font-weight: 550;
 margin-bottom: 20px;}
 
@@ -487,7 +487,7 @@ border: solid #11f677 1px;
 padding: 10px 20px;
 font-weight: 550;}
 
-.nav32 img{width: 100%;
+.nav32 img{width: 80%;
 margin-top: 60px;
 height: 230px}
 
@@ -523,3 +523,6 @@ margin-top: 10px}
 
 .nav28{justify-content: center;
 display: flex;}
+
+.nav22 img:hover{transform: scale(1.2);
+width: 100%}
