--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ width: 150px;
 margin-left: 30px;
 position:relative;}
 
-.nav1 p{font-size: 19px;
+.nav1 p{
 text-align: center;
 color: white;
 position: relative;
@@ -46,7 +46,6 @@ font-weight: 600;
 margin-top: 50px;
 margin-left: -30px;
 text-align: center;
-font-size: 42px;
 position: relative;
 z-index: 100}
 
@@ -65,10 +64,11 @@ margin-bottom: 100px}
 .nav2{justify-content: center;
 display: flex;}
 
-main{background: #1a191d;}
+main{background: #1a191d;
+margin-top: -100px}
 
 .nav3 h1{color: white;
-margin-top: 250px;
+margin-top: 300px;
 font-size: 35px;
 font-weight: 550}
 
@@ -101,7 +101,7 @@ border: solid #11f677 3px;
 border-radius: 10px;
 width: 166px;
 height: 220px;
-margin-top: 170px;}
+margin-top: 220px;}
 
 .nav6{background: black;
 border: solid #11f677 3px;
@@ -115,7 +115,7 @@ border: solid #11f677 3px;
 border-radius: 10px;
 width: 166px;
 height: 220px;
-margin-top: 170px;}
+margin-top: 220px;}
 
 .nav8{background: black;
 border: solid #11f677 3px;
@@ -129,7 +129,7 @@ border: solid #11f677 3px;
 border-radius: 10px;
 width: 166px;
 height: 220px;
-margin-top: 170px;}
+margin-top: 220px;}
 
 .nav10{background: black;
 border: solid #11f677 3px;
@@ -260,7 +260,6 @@ margin-top: 100px}
 .nav13 h1{color: white;
 margin-top: 70px;
 font-weight: 550;
-font-size: 35px;
 text-align: center;}
 
 .nav14{width: 240px;
@@ -304,7 +303,6 @@ border-radius: 7px}
 
 .nav18 h1{color: black;
 font-weight: 540;
-font-size: 37px;
 text-align: center;
 margin-top: 50px;}
 
@@ -346,7 +344,6 @@ color: #11f677;}
 
     .swiper {
       width: 100%;
-      height: 400px;
     }
 
     .swiper-slide {
@@ -394,7 +391,8 @@ font-weight: 550;}
 height: 550px;
 margin-top: 50px}
 
-footer{background: #2e2a2a;}
+footer{background: #2e2a2a;
+margin-bottom: 100px}
 
 .nav26 h1{font-size: 40px;
     margin-top: 50px;
@@ -466,7 +464,8 @@ height: 150px;
 border: solid #262529 1px;
 border-radius: 7px;}
 
-.nav31 img{width: 300px;
+.nav31 img{width: 250px;
+    cursor: pointer;
 height: 80px;
 margin-top: 20px;
 margin-left: 30px;}
@@ -513,7 +512,8 @@ padding: 10px 20px;}
 .nav33{display: flex;
 justify-content: center;}
 
-.nav33 img{margin-bottom: 30px;}
+.nav33 img{margin-bottom: 30px;
+width: 96%}
 
 .nav34{border-top: solid silver 1px;}
 
