--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ padding-left: 80px;}
 
 nav ul li a{text-decoration: none;
 color: white;
-padding: 34px;}
+padding: 28px;}
 
 .navbar img{height: 80px;
 width: 150px;
@@ -271,6 +271,9 @@ margin: 20px;
 display: flex;
 justify-content: space-between;}
 
+.nav014{display: flex;
+justify-content: center;}
+
 .nav14 h1{color: white;
 text-align: center;
 font-size: 20px;
@@ -295,11 +298,17 @@ margin-left: 70px;}
 .nav15{display: flex;
 justify-content: center;}
 
-.nav18{background: #d5eaf6;
+.nav18{background: linear-gradient(
+          to right,
+          #11f677,
+          white); 
 width: 100%;
 height: 280px;
 margin-top: 100px;
 border-radius: 7px}
+
+.nav013{display: flex;
+justify-content: center;}
 
 .nav18 h1{color: black;
 font-weight: 540;
@@ -311,8 +320,7 @@ color: black;}
 
 .btn01{color: black;
 background: #11f677;
-border: solid #11f677 1px;
-margin-left: 490px}
+border: solid #11f677 1px;}
 
 .btn3:hover{color: black;
 background: #11f677;
@@ -428,11 +436,13 @@ color: black;
 font-size: 16px;}
 
 .nav27 a{justify-content: center;
-text-align: center;
-margin-left: 80px}
+text-align: center;}
 
 .nav29 img{width: 100%;
-height: 700px}
+height: 600px}
+
+.nav29{display: flex;
+justify-content: center;}
 
 .nav31 h1{color: white;
 text-align: center;
@@ -464,9 +474,10 @@ height: 150px;
 border: solid #262529 1px;
 border-radius: 7px;}
 
-.nav31 img{width: 250px;
-    cursor: pointer;
+.nav31 img{width: 260px;
+cursor: pointer;
 height: 80px;
+border-radius: 3px;
 margin-top: 20px;
 margin-left: 30px;}
 
@@ -513,7 +524,8 @@ padding: 10px 20px;}
 justify-content: center;}
 
 .nav33 img{margin-bottom: 30px;
-width: 96%}
+width: 96%;
+margin-top: 20px;}
 
 .nav34{border-top: solid silver 1px;}
 
