--- a/css/style.css
+++ b/css/style.css
@@ -538,3 +538,15 @@ display: flex;}
 
 .nav22 img:hover{transform: scale(1.2);
 width: 100%}
+
+#custom-cursor {
+    border-radius: 50%;
+    border: solid #1a191d 11px;
+    box-shadow: 0 0 10px #11f677;
+  width: 25px; /* Cursor image width */
+  height: 25px; /* Cursor image height */
+  background: #11f677; /* URL of your cursor image */
+  position: fixed;
+  z-index: 9999; /* Set a high z-index to make it appear on top of other elements */
+}
+
